--- a/reproducibility_files/QSIDE_Q9.Rmd
+++ b/reproducibility_files/QSIDE_Q9.Rmd
@@ -29,6 +29,8 @@ head(policingdata)
 
 ### For this situation, we need to first find the officers with the most incident reports using summarise/count in dplyr. We then select data from these officers and create subcategories for different racial groups. 
 
+### Question: What proportion of police incidents go to different race groups for each of the most active officers?
+
 ```{r}
 officertally <- policingdata %>%
   group_by(Officer) %>%
