Update and rename QSIDE - Q11.Rmd to QSIDE_Q11.Rmd

--- a/reproducibility_files/QSIDE_Q11.Rmd
+++ b/reproducibility_files/QSIDE_Q11.Rmd
@@ -29,6 +29,8 @@ head(policingdata)
 
 ### For this situation, we need to calculate the number of incidents where there is use of force in dplyr. 
 
+### Question: Are officers more likely to use force on subjects with specific intersectional identities?
+
 ```{r}
 qdata <- policingdata %>%
   filter(UseOfForce == "Yes") %>%
