--- a/reproducibility_files/QSIDE_Q7.Rmd
+++ b/reproducibility_files/QSIDE_Q7.Rmd
@@ -29,6 +29,8 @@ head(policingdata)
 
 ### For this situation, we need to calculate mean bond amount using summarise in dplyr. 
 
+### Question: How does average bond amount differ according to race and gender?
+
 ```{r}
 qdata <- policingdata %>%
   group_by(Race, Gender) %>%
