--- a/reproducibility_files/QSIDE_Q8.Rmd
+++ b/reproducibility_files/QSIDE_Q8.Rmd
@@ -29,6 +29,8 @@ head(policingdata)
 
 ### For this situation, we need to sort the data by race and parol values. 
 
+### Question: What proportion of police incidents go to different race groups within each patrolling beat/neighborhood?
+
 ```{r}
 qdata <- policingdata %>%
   group_by(Patrol, Race) %>%
